<resources>
    <string name="app_name">GoGas Delivery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Delivery User</string>
    <string name="nav_header_subtitle">delivery_user@gogas.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_delivery">Delivery</string>
    <string name="menu_history">History</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Feedback</string>
    <string name="menu_navigate">Navigate</string>
    <string name="menu_details">Details</string>
    <string name="sign">Digital Sign</string>
    <string name="cancel">CANCEL</string>
    <string name="deliver">DELIVER</string>
    <string name="registered_emailid">Please enter registered email Id</string>
    <string name="email">Email Id</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="forgot_pass">Forgot password ?</string>
    <string name="action_refresh">Refresh</string>
</resources>
