<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/root"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/tab_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/homeTab"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_tab_selected"
            android:gravity="center"
            android:onClick="onhomeTabBtnClick"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/menu_delivery"
            android:textColor="#ffffff"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/orderstatusTab"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_tab_unselected"
            android:gravity="center"
            android:layout_marginLeft="-2dp"
            android:onClick="onorderstatusTabBtnClick"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/menu_history"
            android:textColor="#d0313d"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/historyTab"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_tab_unselected"
            android:gravity="center"
            android:layout_marginLeft="-2dp"
            android:onClick="onhistoryTabBtnClick"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/menu_transaction"
            android:textColor="#d0313d"
            android:textSize="16dp" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>