<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.DeliveryDetailActivity">

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:paddingLeft="30dp"
        android:background="#626469"
        android:text="Delivery details"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/layout1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text1"
            android:textSize="@dimen/dp_15"
            android:fontFamily="sans-serif-medium"
            android:text="Name                             :        "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text2"
            android:textSize="@dimen/dp_15"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/customerName"
            android:text="User"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text1"
            android:textSize="@dimen/dp_15"
            android:fontFamily="sans-serif-medium"
            android:text="Consumer ID                 :      "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text2"
            android:textSize="@dimen/dp_15"
            android:id="@+id/customerID"
            android:fontFamily="sans-serif-medium"
            android:text="ANB1254"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text1"
            android:textSize="@dimen/dp_15"
            android:fontFamily="sans-serif-medium"
            android:text="Phone number              :      "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text2"
            android:textSize="@dimen/dp_15"
            android:id="@+id/contactNumber"
            android:fontFamily="sans-serif-medium"
            android:text="9535424002"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text1"
            android:textSize="@dimen/dp_15"
            android:fontFamily="sans-serif-medium"
            android:text="Address                          :       "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text2"
            android:textSize="@dimen/dp_15"
            android:id="@+id/address"
            android:fontFamily="sans-serif-medium"
            android:text="Flat No.123, second floor, Gandhi nagar, Visakhapatnam"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#eeeeee" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text1"
            android:textSize="@dimen/dp_15"
            android:fontFamily="sans-serif-medium"
            android:text="Payment                         :       "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text2"
            android:textSize="@dimen/dp_15"
            android:fontFamily="sans-serif-medium"
            android:id="@+id/payment_type"
            android:text="Cash on delivery"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text1"
            android:textSize="@dimen/dp_15"
            android:fontFamily="sans-serif-medium"
            android:text="Amount paid                  :       "/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/booking_text2"
            android:textSize="@dimen/dp_15"
            android:id="@+id/payable_amount"
            android:fontFamily="sans-serif-medium"
            android:text="Rs.700"/>

    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="0dp"
            android:background="#eeeeee" />




        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="0dp"
            android:background="#eeeeee" />

        <ImageView
            android:id="@+id/map_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_150"
            android:layout_margin="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/map" />

            <LinearLayout
                android:id="@+id/navigate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="5dp"
                android:layout_gravity="center"
                android:paddingBottom="5dp"
                android:layout_weight="1"
                android:background="#90eeeeee"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="navigateCall"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_10"
                    android:src="@drawable/navigation" />

                <TextView
                    android:id="@+id/homeTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/menu_navigate"
                    android:textColor="@color/blue"
                    android:textSize="16dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/sign"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/sign"
                android:background="@drawable/background_rect_grey"
                android:textColor="@color/booking_text2"
                android:textSize="16dp" />


            <LinearLayout
                android:id="@+id/layout_delivery"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingBottom="20dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/cancel"
                        android:onClick="cancelClk"
                        android:textColor="@color/booking_text2"
                        android:background="@color/grey"
                        android:textSize="16dp" />

                    <Button
                        android:id="@+id/orderstatusTab"
                        android:layout_weight="1"
                        android:layout_marginLeft="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/deliver"
                        android:onClick="deliverClk"
                        android:background="@color/green"
                        android:textColor="@color/white"
                        android:textSize="16dp" />


            </LinearLayout>



    </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>

<include layout="@layout/layout_progress" />
    </RelativeLayout>
